--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: python
 python:
   - "2.7"
 # command to install dependencies
-install: "pi instal -r requirements.txt"
+install: "pip install -r requirements.txt"
 # command to run tests
 script: nosetests
 notifications:
